--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOKEPON!</title>
+    <script src="./js/script.js"></script>
 </head>
 <body>
     <H1>MOKEPON! 🔥💧🌱</H1>
@@ -45,8 +46,8 @@
     <section id="seleccionar-ataque">
         <h2>Elige tu ataque:</h2>
 
-        <p>Tu mascota tiene <span>3</span> vidas</p>
-        <p>La mascota del enemigo tiene <span>3</span> vidas</p>
+        <p>Tu mascota <span id="mascota-jugador"></span> tiene <span>3</span> vidas</p>
+        <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span>3</span> vidas</p>
         <p>
             <button id="btn-fuego">Fuego 🔥</button>
             <button id="btn-agua">Agua 💧</button>
@@ -62,6 +63,6 @@
         <button id="btn-reiniciar">Reiniciar</button>
     </section>
 
-    <script src="./js/script.js"></script>
+    
 </body>
 </html>
